numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@unsupported_const_eval_expr_conversion.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/unsupported_const_eval_expr_conversion.nbt
---
error: while type checking
  ┌─ <internal:3>:1:8
  │
1 │ meter^(3 -> 4)
  │        ^^^^^^ Unsupported expression in const-evaluation of exponent: conversion.
